--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,20 @@
         <version>3.1.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+
     <groupId>com.mahmuttech.stockmanagement</groupId>
     <artifactId>zuul-edge-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>zuul-edge-server</name>
     <description>zuul-edge-server</description>
+
+
     <properties>
         <java.version>17</java.version>
     </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -27,6 +33,8 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+<!--        Spring Cloud-->
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
