--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -46,21 +46,32 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:8761/eureka
+      defaultZone: http://localhost:8761/eureka
   instance:
-    instance-id: ${spring.application.name}:${random.uuid}
     prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    instance-id: ${spring.application.name}:${random.uuid}
+
+logging:
+  level:
+    com:
+      netflix:
+        eureka: OFF
+        discovery: OFF
+
 
 ---
 spring:
   config:
     activate:
       on-profile: stage
+
+
 eureka:
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka
   instance:
     prefer-ip-address: true
-    lease-renewal-interval-in-seconds: 10
+    lease-renewal-interval-in-seconds: 5
     instance-id: ${spring.application.name}:${random.uuid}
