changed package name.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
 
-    <groupId>com.mahmuttech.stockmanagement</groupId>
+    <groupId>com.microshop.stockmanagement</groupId>
     <artifactId>zuul-edge-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>zuul-edge-server</name>
