--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,12 +20,23 @@ spring:
           uri: lb://user-service/
           predicates:
             - Path=/api/1.0/user/**
+        - id: cart-service
+          uri: lb://cart-service/
+          predicates:
+            - Path=/api/1.0/cart/**
+        - id: cart-service
+          uri: lb://cart-service/
+          predicates:
+            - Path=/api/1.0/order/**
 info:
   component: Zuul Edge  Server
 
 
+#server:
+#  port: 8762
+
 server:
-  port: 8762
+  port: 4041
 
 endpoints:
   routes:
@@ -49,7 +60,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:4042/eureka
   instance:
     prefer-ip-address: true
     lease-renewal-interval-in-seconds: 5
@@ -73,7 +84,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:1003/eureka
+      defaultZone: http://eureka-server:4042/eureka
   instance:
     prefer-ip-address: true
     lease-renewal-interval-in-seconds: 5
